# Optimization-of-E-Commerce-Product-Recommendation-System

./: README.md  miniprojcode.ipynb  outputs.md  pyproject.toml  requirements.txt
docs/: CHANGELOG.md  OPTIMIZATION_REPORT.md  USAGE.md
scripts/: benchmark_recsys.py
src/recsys/: __init__.py  cli.py  data.py  features.py  models.py
