[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys"
version = "0.1.0"
description = "Hybrid content + popularity recommender with CLI"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=14.0.0",
]

[project.scripts]
recsys = "recsys.cli:main"

[tool.setuptools.packages.find]
where = ["src"]